hypothetical_transportation/frontend/src/components/header/header.css
.header {
  position: absolute;
  display: flex;
  left: 0;
  top: 0;
  height: 13%;
  width: 100%;
  background-color: #ffae07;
  padding: 20px 20px;
}

.header-text {
  margin: auto;
  color: #fff;
  /* padding: 10px; */
  font-size: 30px;
  font-family: cursive;
}

.logo {
  max-width: 100px;
  height: auto;
  position: absolute;
  left: 1%;
  top: 10%;
}

.header-button button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #000a41;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.header-button button:hover {
  background-color: #0020d6;
}

.divider15px {
  width: 15px;
  height: auto;
  display: inline-block;
}

